name:                haskell-tor
version:             0.1.0.0
synopsis:            A Haskell Tor Node
homepage:            http://galois.com
license:             AllRightsReserved
license-file:        LICENSE
author:              Adam Wick
maintainer:          awick@galois.com
category:            Network
build-type:          Simple
extra-source-files:  README.mkd
cabal-version:       >=1.10

library
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     src

  build-depends:
                      array                      >= 0.5   && < 0.7,
                      asn1-encoding              >= 0.8   && < 0.10,
                      asn1-types                 >= 0.2   && < 0.4,
                      attoparsec                 >= 0.12  && < 0.14,
                      base                       >= 4.7   && < 5.0,
                      base64-bytestring          >= 1.0   && < 1.2,
                      binary                     >= 0.7   && < 0.9,
                      bytestring                 >= 0.10  && < 0.11,
                      cereal                     >= 0.4   && < 0.6,
                      cipher-aes128              >= 0.6   && < 0.8,
                      containers                 >= 0.5   && < 0.7,
                      crypto-api                 >= 0.13  && < 0.15,
                      crypto-pubkey-types        >= 0.4   && < 0.6,
                      DRBG                       >= 0.5   && < 0.7,
                      entropy                    >= 0.3   && < 0.5,
                      fingertree                 >= 0.1   && < 0.3,
                      monadLib                   >= 3.7   && < 3.9,
                      network                    >= 2.5   && < 2.7,
                      old-locale                 >= 1.0   && < 1.2,
                      pretty-hex                 >= 1.0   && < 1.2,
                      pureMD5                    >= 2.1   && < 2.3,
                      RSA                        >= 2.1.0 && < 2.2,
                      SHA                        >= 2     && < 2.2,
                      stm                        >= 2.4   && < 2.6,
                      tagged                     >= 0.7   && < 0.9,
                      time                       >= 1.4   && < 1.6,
                      x509                       >= 1.4   && < 1.6

  other-modules:
                      Paths_haskell_tor

  exposed-modules:
                      Codec.Compression.Zlib.Adler32,
                      Codec.Compression.Zlib.Deflate,
                      Codec.Compression.Zlib.HuffmanTree,
                      Codec.Compression.Zlib.Monad,
                      Codec.Compression.Zlib.OutputWindow,
                      Codec.Compression.Zlib,
                      Data.Binary.TLSVector,
                      Data.Word24,
                      TLS.Alert,
                      TLS.Certificate.ClientCertificateType,
                      TLS.Certificate.DistinguishedName,
                      TLS.Certificate,
                      TLS.ChangeCipher,
                      TLS.CipherSuite.Block,
                      TLS.CipherSuite.Encryptor,
                      TLS.CipherSuite.HashAlgorithm,
                      TLS.CipherSuite.HMAC,
                      TLS.CipherSuite.KeyExchangeAlgorithm,
                      TLS.CipherSuite.Null,
                      TLS.CipherSuite.PRF,
                      TLS.CipherSuite.RC4,
                      TLS.CipherSuite.SignatureAlgorithm,
                      TLS.CipherSuite.Stream,
                      TLS.CipherSuite.TripleDES,
                      TLS.CipherSuite,
                      TLS.CompressionMethod,
                      TLS.Context,
                      TLS.DiffieHellman,
                      TLS.Handshake.Certificate,
                      TLS.Handshake.CertificateRequest,
                      TLS.Handshake.CertificateVerify,
                      TLS.Handshake.ClientHello,
                      TLS.Handshake.ClientKeyExchange,
                      TLS.Handshake.Extension,
                      TLS.Handshake.Finished,
                      TLS.Handshake.HelloRequest,
                      TLS.Handshake.ServerHello,
                      TLS.Handshake.ServerHelloDone,
                      TLS.Handshake.ServerKeyExchange,
                      TLS.Handshake.Type,
                      TLS.Handshake,
                      TLS.Negotiation,
                      TLS.ProtocolVersion,
                      TLS.Random,
                      TLS.Records.ContentType,
                      TLS.Session,
                      Tor.Circuit,
                      Tor.DataFormat.Consensus,
                      Tor.DataFormat.DefaultDirectory,
                      Tor.DataFormat.DirCertInfo,
                      Tor.DataFormat.Helpers,
                      Tor.DataFormat.RelayCell,
                      Tor.DataFormat.RouterDesc,
                      Tor.DataFormat.TorAddress,
                      Tor.DataFormat.TorCell,
                      Tor.HybridCrypto,
                      Tor.Link,
                      Tor.NetworkStack.Fetch,
                      Tor.NetworkStack.System,
                      Tor.NetworkStack,
                      Tor.Options,
                      Tor.RouterDesc.Render,
                      Tor.RouterDesc,
                      Tor.State.Credentials,
                      Tor.State.Directories,
                      Tor.State.RNG,
                      Tor.State.Routers,
                      Tor.State

executable haskell-tor
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -Wall
  build-depends:
                      asn1-encoding              >= 0.8   && < 0.10,
                      asn1-types                 >= 0.2   && < 0.4,
                      base                       >= 4.7   && < 5.0,
                      base64-bytestring          >= 1.0   && < 1.2,
                      bytestring                 >= 0.10  && < 0.11,
                      crypto-pubkey-types        >= 0.4   && < 0.6,
                      haskell-tor                >= 0.1   && < 0.3,
                      network                    >= 2.5   && < 2.7,
                      old-locale                 >= 1.0   && < 1.2,
                      time                       >= 1.4   && < 1.6

test-suite test-tor
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  ghc-options:        -Wall
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -fno-warn-orphans
  build-depends:
                      asn1-types                 >= 0.2   && < 0.4,
                      base                       >= 4.7   && < 5.0,
                      binary                     >= 0.7   && < 0.9,
                      bytestring                 >= 0.10  && < 0.11,
                      crypto-api                 >= 0.13  && < 0.15,
                      DRBG                       >= 0.5   && < 0.7,
                      haskell-tor                >= 0.1   && < 0.3,
                      HUnit                      >= 1.2   && < 1.4,
                      QuickCheck                 >= 2.7   && < 2.9,
                      RSA                        >= 2.1.0 && < 2.2,
                      SHA                        >= 2     && < 2.2,
                      tagged                     >= 0.7   && < 0.9,
                      test-framework             >= 0.8   && < 0.10,
                      test-framework-hunit       >= 0.3   && < 0.5,
                      test-framework-quickcheck2 >= 0.3   && < 0.5,
                      time                       >= 1.4   && < 1.6,
                      x509                       >= 1.4   && < 1.6
